<resources>
    <string name="app_name">Danetkas</string>
    <string name="facebook_app_id">608972723852676</string>
    <string name="fb_login_protocol_scheme">fb608972723852676</string>
    <string name="goole_maps_key">AIzaSyCczk1b8_C7NOm-ZXkj76y6fjBixUTV5qI</string>
    <string name="frg_signin_login_accoint">Login Your Account</string>
    <string name="frg_signin_username">User Name</string>
    <string name="frg_signin_password">Password</string>
    <string name="frg_signin_create_account">Create Account</string>
    <string name="frg_signup_accoint_create">Create an Account</string>
    <string name="frg_signup_yourname">Your Name</string>
    <string name="frg_signup_password">Password</string>
    <string name="frg_signup_email">Email Address</string>
    <string name="frg_signin_login">Login</string>
    <string name="frg_signup_Register">Register</string>
    <string name="frg_signup_create_account">Create Account</string>
    <string name="frg_forgot_password_login_accoint">Forgot Password</string>
    <string name="frg_forgot_password_username">Username / Email</string>
    <string name="frg_forgot_password_reset">Reset Password</string>
    <string name="frg_forgot_password_login">Login</string>
    <string name="frg_signup_confirm_cpassword">Confirm Password</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="calendar">Calender</string>
    <string name="frg_edit_profile">Edit Profile</string>
    <string name="frg_edit_profile_yourname">Edit your name</string>
    <string name="frg_edit_profile_cnic">Edit your CNIC</string>
    <string name="frg_edit_profile_province">Edit your province</string>
    <string name="frg_edit_profile_edit_city">Edit your City</string>
    <string name="frg_edit_profile_update">Update</string>
    <string name="frg_edit_profile_phone">Edit your phone number</string>
    <string name="frg_my_bills_enter_reference">Enter reference number</string>
    <string name="frg_my_bills_account_number">Enter acount number</string>
    <string name="frg_my_bills_add_update">Add/Update</string>
    <string name="frg_my_bills">My Bills</string>
    <string name="select_bill_type">Bill Type</string>
    <string name="select_biller_type">Biller Type</string>
    <string name="frg_history">History</string>
    <string name="frg_important_dates">Important Dates</string>
    <string name="frg_settings">Settings  \t</string>
    <string name="frag_calender_todays_slot">Today</string>
    <string name="frag_calender_important_dates">Important dates</string>
    <string name="frg_MaintenanceSchedule">Maintenance Schedule</string>
    <string name="OutageScheduleFragment">Outage Schedule</string>
    <string name="AlertsFragment">Alerts</string>
    <string name="TermsConditionsFragment"><![CDATA[Terms & Conditions]]></string>
    <string name="BillAnaylsisFragment">Bill Anaylsis</string>
    <string name="frg_presign_play">Play \t</string>
    <string name="frg_presign_what_is_denketa">What is Danetkas?  \t</string>
    <string name="rules">Rules  \t</string>
    <string name="frg_presign_dictionary">Dictionary  \t</string>
    <string name="frg_presign_settings">Settings  \t</string>
    <string name="gameplay">Gameplay</string>
    <string name="extra_rules">Extra rules</string>
    <string name="challenge">Challenge</string>
    <string name="frg_rules_desc">"     “Danetkas” is for a minimum of 2 players. One is the Master(who knows the answers) and the rest are Investigators. The Investigators ask questions in the form of “Yes”/”No”. The Master replies according to the answer. The riddle is solved when one of the Investigators can explain everything on the hint card."</string>
    <string name="frg_rules_desc2">"     The Investigators can check the riddle during the whole gameplay. The Master can also check the riddle, but the \nInvestigators CANNOT see the answer. After all the players examine the received information "</string>
    <string name="frg_rules_game_start">THE GAME STARTS!</string>
    <string name="frg_rules_master1">"There can be only "</string>
    <string name="frg_rules_master2">"ONE "</string>
    <string name="frg_rules_master3">Master.</string>
    <string name="frg_rules_investigator2">" The Investigators ask  “Yes”/”No”  questions. The Master can answer using the following options:"</string>
    <string name="frg_rule_false_assumtion">False assumption</string>
    <string name="frg_rule_yes">Yes</string>
    <string name="frg_rule_no">No</string>
    <string name="frg_rule_specify_question">Specify the question</string>
    <string name="frg_rule_dont_knw">I don\'t know</string>
    <string name="frg_game_play_hint">HINT</string>
    <string name="frg_game_play_anser">ANSWER</string>
    <string name="frg_game_play_escape_death">Remi escaped death  \nbut still failed.</string>
    <string name="frg_game_play_remi_survived">“A composer named \nRemi survived a \ngunshot but later \ndied of cancer.”</string>
    <string name="frg_game_play_was_musian">Was Remi a musician?</string>
    <string name="frg_game_play_play_villian">Did he play the violin?</string>
    <string name="frg_game_play_does_he">Does he play an \ninstrument?</string>
    <string name="frg_game_play_did_die">Did he die?</string>
    <string name="frg_rule_please_spicify">Please specify the question</string>
    <string name="frg_game_play_did_he_die_right">Did he die right after\n receiving a gunshot?</string>
    <string name="frg_game_play_did_he_end">Did he end up dying\n of an illness?</string>
    <string name="frg_game_play_etc">Etc...</string>
    <string name="frg_extra_desc">Look carefully at all the information that you can find, everything might have a double meaning, every little detail is important</string>
    <string name="frg_extra_desc2">"     It’s up to you to decide how strict you want to be. The Master can help by using intonations and giving directions. If you see that the Investigators still can’t find the solution, ask them to look again at the information provided, check if they miss anything. If the Investigators run out of questions, then the players can ask for extra hints their wise friend"</string>
    <string name="frg_extra_desc_3_01">"     It's up to the Master to decide which extra hint to give  depending on  which part  of  the story the Investigators have difficulty solving. It’s up to you to decide how detailed you want to get the story. If you are a perfectionist you should find out everything. No need to get the story word by word but you need to explain everything, including the"</string>
    <string name="frg_extra_desc_3_02">". If something does not make sense to the Investigators,  dig deeper.  "</string>
    <string name="frg_extra_message_4_01">There can be different “logical” storylines you might come up with, but the</string>
    <string name="frg_extra_message_4_02">answer the questions according to that.</string>
    <string name="frg_extra_desc5">Most of the stories present in this game are true historical events or debatable by musicologists. If you see this icon, that means that we, the creators of this game, made up the story based on real musical and historical facts.</string>
    <string name="frg_challnge_difficult">DIFFICULT BUT FUN!</string>
    <string name="frg_challnge_prof_inves">For professional Investigators</string>
    <string name="frg_challnge_prof_inves2">Do not ask the help of Mr. Rigoletto.</string>
    <string name="frg_challnge_prof_mast">For professional Masters</string>
    <string name="frg_challnge_prof_mast2">Invent your own Rigolettos instead  of using the ones provided.</string>
    <string name="frg_challnge_prof_musi">For music lovers and \nprofessional musicians</string>
    <string name="frg_challnge_prof_musi2">For music lovers and \nprofessional musicians</string>
    <string name="frg_extra_challenge_inves">" INVESTIGATOR"</string>
    <string name="frg_extra_challenge_inves2">Avoid false assumptions and make a lot of questions, going step by step, instead of coming up with a story.  “The woman was a street musician and then someone gave her money and she bought an instrument with that?”\n   That can be broken down into\n several questions:\n•  “Was the woman a musician?”\n•  “Did someone give her money?”\n•  “Did she want to buy an instrument?”  \nEtc...</string>
    <string name="frg_settings_my_account">My Account  \t</string>
    <string name="frg_settings_lang">Language  \t</string>
    <string name="frg_settings_rate">Rate the App  \t</string>
    <string name="frg_settings_contact">Contact  \t</string>
    <string name="frg_settings_faq">FAQ  \t</string>
    <string name="frg_settings_about">About us  \t</string>
    <string name="frg_settings_p_t">Privacy and Terms  \t</string>
    <string name="frg_my_account">My Account  \t</string>
    <string name="frg_my_account_signup">SIGNUP</string>
    <string name="frg_my_account_email_address">E-mail address</string>
    <string name="frg_my_account_set_pass">Set Password</string>
    <string name="frg_my_account_cnfrm_pass">Confirm Password</string>
    <string name="frg_my_account_register">Register</string>
    <string name="frg_my_account_or">OR</string>
    <string name="frg_my_account_already_user">Already a user?</string>
    <string name="frg_my_account_login">Login</string>
    <string name="frg_my_account_signup_google">Sign up with Google</string>
    <string name="frg_my_account_signup_fb">Sign up with Facebook</string>
    <string name="fg_signin">My account</string>
    <string name="fg_signin_signin">Login</string>
    <string name="fg_signin_email_address">E-mail address</string>
    <string name="fg_signin_set_pass">Password</string>
    <string name="fg_signin_forgot">Forgot Password?</string>
    <string name="frg_signin_log_in">Log in</string>
    <string name="fg_signin_google">Log in with Google</string>
    <string name="fg_signin_fb">Log in with Facebook</string>
    <string name="fg_signin_new">New to Danetkas?</string>
    <string name="fg_signin_signup">SIGN UP</string>
    <string name="fg_signup_complete">My account</string>
    <string name="fg_signup_complete_email_address">E-mail address</string>
    <string name="fg_signup_complete_username">Username</string>
    <string name="fg_signup_complete_dob">Date of birth</string>
    <string name="fg_signup_complete_gender">Gender</string>
    <string name="fg_signup_complete_nationality">Nationality</string>
    <string name="fg_signup_complete_start">Get Started</string>
    <string name="fg_signup_complete_already_user">Already a user?</string>
    <string name="fg_signup_complete_login">Login</string>
    <string name="fg_frgt_pass">My account</string>
    <string name="fg_frgt_pass_reset">Reset Password</string>
    <string name="fg_frgt_pass_old">Old password</string>
    <string name="fg_frgt_pass_new">New Password</string>
    <string name="fg_frgt_pass_cnfrm_pass">Confirm password</string>
    <string name="fg_frgt_pass_confrm">Confirm</string>
    <string name="frg_forget_password">My account</string>
    <string name="frg_forget_password_">Forgot password</string>
    <string name="frg_rate_app">Rate the app</string>
    <string name="frg_rate_app_hard">How hard was this Danetka?</string>
    <string name="frg_rate_app_you_enjoyed">Did you enjoy it?</string>
    <string name="frg_rate_app_helpful">Were the rigolettos helpful?</string>
    <string name="frg_rate_app_how_hard">How hard was this Danetka?</string>
    <string name="frg_rate_app_Easy">Easy</string>
    <string name="frg_rate_app_Hard">Hard</string>
    <string name="frg_rate_app_Boriiing">Boriiing</string>
    <string name="frg_rate_app_WOW">WOW</string>
    <string name="frg_rate_app_no">No :/</string>
    <string name="frg_rate_app_yes">YES!</string>
    <string name="frg_rate_app_Nope">Nope</string>
    <string name="frg_rate_app_sure">Sure</string>
</resources>