<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:padding="15dp"

                android:text="@string/frg_challnge_difficult"
                android:textColor="@color/thm_red_app"
                android:textSize="@dimen/fontsize_xlarge"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_lupa" />

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:paddingStart="15dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:text="@string/frg_challnge_prof_inves"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontsize_mini"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:text="@string/frg_challnge_prof_inves2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontsize_mini" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_hat" />

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:paddingStart="15dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:text="@string/frg_challnge_prof_mast"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontsize_mini"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"

                        android:text="@string/frg_challnge_prof_mast2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontsize_mini" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_heart" />

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:paddingStart="15dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:text="@string/frg_challnge_prof_musi"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontsize_mini"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"

                        android:text="Try to find the exact composer or \nthe exact musical piece."
                        android:textColor="@color/black"
                        android:textSize="@dimen/fontsize_mini" />


                </LinearLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/ic_shp_circle_dark_blue"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/frg_extra_challenge_inves"
                        android:textColor="@color/dull_white2"

                        android:textSize="@dimen/fontsize_mini"
                        android:textStyle="bold" />


                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:justificationMode="inter_word"
                        android:padding="15dp"
                        android:text="@string/frg_extra_challenge_inves2"

                        android:textColor="@color/dull_white2"
                        android:textSize="@dimen/fontsize_mini" />

                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="32dp"
                    android:src="@drawable/ic_bulb" />


            </RelativeLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-70dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="400dp"
                android:src="@drawable/ic_master_tilte" />
        </RelativeLayout>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>